# projectpicker

./: LICENSE.md  README.md  setup.cfg
projectpicker/: __main__.py
