[metadata]
name = projectpicker
version = attr: projectpicker.__version__.__version__
description = School project allocation tool
author = Shahab Sanjari
license = multiple
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    odfpy
    colorama

[options.entry_points]
console_scripts =
    projectpicker = projectpicker.__main__:main
